# SkillboxHW

./: .gitignore
Lesson 33.1/: CMakeLists.txt  main.cpp
Lesson 33.2/: CMakeLists.txt  main.cpp
Lesson 33.3/: CMakeLists.txt  main.cpp
Lesson 33.4/: CMakeLists.txt  main.cpp
Lesson 35.3/: CMakeLists.txt  main.cpp
Lesson 36/: CMakeLists.txt  main.cpp  qobjects.cpp  qobjects.h
Lesson_37_1/: CMakeLists.txt  CalcMainWindow.h  design_37_1.ui  main.cpp
Lesson_37_2/: CMakeLists.txt  Lesson_37_2.qmlproject  Lesson_37_2_2.qmlproject  Lesson_37_2_2.qmlproject.qtds  qmlmodules
Lesson_37_2/content/: App.qml  Screen01.ui.qml
Lesson_37_2/imports/: CMakeLists.txt
Lesson_37_2/imports/Lesson_37_2/: CMakeLists.txt  qmldir
Lesson_37_2/imports/Lesson_37_2/designer/: plugin.metainfo
Lesson_37_2/imports/Lesson_37_2_2/: CMakeLists.txt  Constants.qml  qmldir
Lesson_37_2/imports/Lesson_37_2_2/designer/: plugin.metainfo
Lesson_37_2/src/: import_qml_plugins.h
Lesson_37_3/: CMakeLists.txt  Lesson_37_3.qmlproject  Lesson_37_3.qmlproject.qtds  Lesson_37_3.qmlproject.qtds.8cca2ac  qmlmodules
Lesson_37_3/content/: App.qml  Screen01.ui.qml
Lesson_37_3/imports/: CMakeLists.txt
Lesson_37_3/imports/Lesson_37_3/: CMakeLists.txt  Constants.qml  qmldir
Lesson_37_3/imports/Lesson_37_3/designer/: plugin.metainfo
Lesson_37_3/src/: import_qml_plugins.h
Lesson_38_1/: CMakeLists.txt  ImageButton.cpp  ImageButton.h  main.cpp
Lesson_38_2/: CMakeLists.txt  main.cpp
Lesson_38_3/: CMakeLists.txt  main.cpp
Lesson_39_1/: CMakeLists.txt  main.qml
Lesson_39_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
